web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-generator-object-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,23)
1|function *g({x, y}) { "use strict"; }
 |                     ^
